--- a/docker/pytorch-neural-style-transfer/Makefile
+++ b/docker/pytorch-neural-style-transfer/Makefile
@@ -1,44 +1,40 @@
-.PHONY: all build rebuild clean start stop restart logs pull console-start console-stop console-logs prune
-IMGNAME=sbetzin/neural-style-tensorflow
-IMGTAG=1.15.0-gpu-py3
+.PHONY: build rebuild clean start stop restart logs pull console-start console-stop console-logs prune
+IMGNAME=sbetzin/neural-style-transfer
+IMGTAG=1.0.0
 	
 build:
-	nvidia-docker build -f Dockerfile-1.15.0-gpu-py3 -t $(IMGNAME):$(IMGTAG) .
-	#nvidia-docker push sbetzin/neural-style-tensorflow:1.15.0-gpu-py3
+	nvidia-docker build -f Dockerfile -t $(IMGNAME):$(IMGTAG) .
 
 clean:
 	docker rmi $(IMGNAME):$(IMGTAG)
 
 start:
-	# nvidia-docker run -d -e AzureStorageConnectionString -e AzureStorageQueueName --name neural-style-tensorflow --restart=unless-stopped $(IMGNAME):$(IMGTAG)
-	nvidia-docker run -d --gpus '"device=1"' -e AzureStorageConnectionString -e AzureStorageQueueName --name neural-style-tensorflow-0 --restart=unless-stopped $(IMGNAME):$(IMGTAG) 
-	nvidia-docker run -d --gpus '"device=2"' -e AzureStorageConnectionString -e AzureStorageQueueName --name neural-style-tensorflow-1 --restart=unless-stopped $(IMGNAME):$(IMGTAG) 
+	nvidia-docker run -d -e AzureStorageConnectionString -e AzureStorageQueueName --name neural-style-transfer --restart=unless-stopped $(IMGNAME):$(IMGTAG)
 
 stop:
-	nvidia-docker stop $(shell docker ps -q --filter "name=neural-style-tensorflow")
+	nvidia-docker stop $(shell docker ps -q --filter "name=neural-style-transfer")
 	docker container prune --force
 
 pull:
 	docker pull $(IMGNAME):$(IMGTAG)
 	
 logs:
-	nvidia-docker logs $(shell docker ps -q --filter "name=neural-style-tensorflow")
+	nvidia-docker logs $(shell docker ps -q --filter "name=neural-style-transfer")
 
 prune:
 	docker container prune --force
 	
 console-start:
-	nvidia-docker run --rm -it -e AzureStorageConnectionString -e AzureStorageQueueName --name neural-style-tensorflow-console --entrypoint /bin/bash $(IMGNAME):$(IMGTAG)
+	nvidia-docker run --rm -it -e AzureStorageConnectionString -e AzureStorageQueueName --name neural-style-transfer-console --entrypoint /bin/bash $(IMGNAME):$(IMGTAG)
 
 console-stop:
-	nvidia-docker stop $(shell docker ps -q --filter "name=neural-style-tensorflow-console")
+	nvidia-docker stop $(shell docker ps -q --filter "name=neural-style-transfer-console")
 	docker container prune --force
 	
 console-logs:
-	nvidia-docker logs $(shell docker ps -q --filter "name=neural-style-tensorflow-console")
+	nvidia-docker logs $(shell docker ps -q --filter "name=neural-style-transfer-console")
 
 console-restart: console-stop console-start
 
 rebuild: stop build start
 restart: stop start
-all: build
