--- a/src/NeuralStyle.Core/NeuralStyle.Core.csproj
+++ b/src/NeuralStyle.Core/NeuralStyle.Core.csproj
@@ -1,82 +1,20 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{7D90A89C-73F6-4949-A232-B1012CC8D19E}</ProjectGuid>
+    <TargetFramework>net7.0</TargetFramework>
     <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>NeuralStyle.Core</RootNamespace>
-    <AssemblyName>NeuralStyle.Core</AssemblyName>
-    <TargetFrameworkVersion>v4.8.1</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
-    <Deterministic>true</Deterministic>
-    <NuGetPackageImportStamp>
-    </NuGetPackageImportStamp>
-    <TargetFrameworkProfile />
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
+    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
   </PropertyGroup>
   <PropertyGroup>
     <SignAssembly>true</SignAssembly>
   </PropertyGroup>
   <PropertyGroup>
     <AssemblyOriginatorKeyFile>default.snk</AssemblyOriginatorKeyFile>
+    <AssemblyTitle>NeuralStyle.Core</AssemblyTitle>
+    <Product>NeuralStyle.Core</Product>
+    <Copyright>Copyright ©  2019</Copyright>
+    <AssemblyVersion>1.0.0.0</AssemblyVersion>
+    <FileVersion>1.0.0.0</FileVersion>
   </PropertyGroup>
-  <ItemGroup>
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Drawing" />
-    <Reference Include="System.Net" />
-    <Reference Include="System.Numerics" />
-    <Reference Include="System.Runtime.Serialization" />
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Include="BasePathes.cs" />
-    <Compile Include="Cloud\BlobAdapter.cs" />
-    <Compile Include="Cloud\Factory.cs" />
-    <Compile Include="EnumExtensions.cs" />
-    <Compile Include="Features\NeuralStyleTransfer\CreateSettings.cs" />
-    <Compile Include="Features\WebpageCreation\CreateMiningMetaData.cs" />
-    <Compile Include="Features\NeuralStyleTransfer\CreateSeries.cs" />
-    <Compile Include="Features\WebpageCreation\Templating.cs" />
-    <Compile Include="Folders\FolderCheck.cs" />
-    <Compile Include="Imaging\ExifAdapter.cs" />
-    <Compile Include="Features\NeuralStyleTransfer\CreateJobs.cs" />
-    <Compile Include="Features\NeuralStyleTransfer\FindMissingCombinations.cs" />
-    <Compile Include="Features\SortImages.cs" />
-    <Compile Include="Features\UpdateNames.cs" />
-    <Compile Include="Features\UpdateTags.cs" />
-    <Compile Include="Imaging\ImageAdapter.cs" />
-    <Compile Include="Links\HardLink.cs" />
-    <Compile Include="Logger.cs" />
-    <Compile Include="Model\NeuralStyleTransferJob.cs" />
-    <Compile Include="Model\JobSettings.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Cloud\QueueAdapter.cs" />
-    <Compile Include="StringExtensions.cs" />
-    <Compile Include="Templating\WebpageCreator.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="app.config" />
-    <None Include="default.snk" />
-  </ItemGroup>
   <ItemGroup>
     <PackageReference Include="AngleSharp">
       <Version>1.0.4</Version>
@@ -87,19 +25,14 @@
     <PackageReference Include="Azure.Storage.Queues">
       <Version>12.15.0</Version>
     </PackageReference>
-    <PackageReference Include="ExifLib">
-      <Version>1.7.0</Version>
-    </PackageReference>
+    <PackageReference Include="ExifLib.Standard" Version="1.7.0" />
     <PackageReference Include="FFMpegCore">
       <Version>5.1.0</Version>
-    </PackageReference>
-    <PackageReference Include="Newtonsoft.Json">
-      <Version>13.0.3</Version>
     </PackageReference>
     <PackageReference Include="SmartFormat.NET">
       <Version>3.2.2</Version>
     </PackageReference>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="System.Drawing.Common" Version="7.0.0" />
   </ItemGroup>
-  <ItemGroup />
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
